Arreglado el problema!

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:stretchColumns="*"
-    tools:context=".MainActivity">
+    tools:context=".Conecta4">
 
 <TextView
         android:id="@+id/tituloTextView"
