--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_weight="3"
         android:gravity="center"
-        android:text="@string/titulo"
+        android:text="@string/Conecta4"
         android:textSize="30sp"
         android:textColor="@color/colorAccent"
         android:textStyle="bold" />
