--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,4 +9,8 @@
         android:id="@+id/menuSend"
         android:icon="@android:drawable/ic_menu_info_details"
         android:title="@string/enviar_mensaje"/>
+    <item
+        android:id="@+id/preferencias"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="Preferencias"/>
 </menu>
